Edureka/Lab-3/Yaml-File/deployment-clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-clusterip
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
         app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
           - containerPort: 8080
