Edureka/Lab-3/Yaml-File/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-app
  ports:
   - protocol: TCP
     port: 443
     targetPort: 443
