Edureka/Lab-3/Yaml-File/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  selector:
    app: nginx
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
