Edureka/Lab-3/Yaml-File/default-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-service
spec:
  selector:
    app: default-app
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
