Edureka/Lab-3/Yaml-File/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
   - protocol: TCP
     port: 30010
     targetPort: 80
