Edureka/Lab-3/Yaml-File/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test-app
  ports:
   - protocol: TCP
     port: 8000
     targetPort: 80
