Edureka/Lab-3/Yaml-File/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: website.com
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: default-service
              port:
                number: 80
        - path: /backend
          pathType: Prefix
          backend:
            service: 
              name: backend-service
              port:
                number: 443
        - path: /test
          pathType: Prefix
          backend:
            service: 
              name: test-service
              port:
                number: 8000
